ghc-4335c07/testsuite/tests/indexed-types/should_fail/T7102B.hs
{-# LANGUAGE TypeFamilies #-}
module T7102B where
import T7102A
type instance T a b = a
from :: a -> T a b
from = id
